--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,3 +16,8 @@ spec:
         name: latinoware-scraper
         ports:
         - containerPort: 8080
+        env:
+          - name: MONGO_PORT_27017_TCP_ADDR
+            value: "latinoware-mongo"
+          - name: MONGO_PORT_27017_TCP_PORT
+            value: "27017"
