--- a/k8s/mongo/pv.yaml
+++ b/k8s/mongo/pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: latinoware-mongo-data-nfs
+  namespace: latinoware-io
 spec:
   capacity:
     storage: 2Gi
@@ -9,5 +10,5 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 10.3.248.103
+    server: nfs-server
     path: /exports/mongo-data/latinoware-mongo
