--- a/k8s/mongo/pvc.yaml
+++ b/k8s/mongo/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: latinoware-mongo-data-nfs
+  namespace: latinoware-io
 spec:
   accessModes:
     - ReadWriteMany
